fix bugs filter search feature, add more filters. improve styling on filter search view(checkboxes alignment)

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -40,10 +40,12 @@
 .footer{
   text-align: right;
   font-family: "PT Sans";
-  font-size: 1.2rem;
+  font-size: 1.5vw;
   color: grey;
-  margin-right: 3%;
+  position:relative;
+  bottom: -5vw;
 }
+
 .api_logo{
   width: 6%;
   height: 4%;
@@ -59,9 +61,9 @@
 
 .search_label{
   font-family: "Anton";
-  font-size: 3rem;
+  font-size: 5vw;
   color: #E15554;
-  margin-left: 28%;
+  margin-left: 23%;
   margin-bottom: 10%;
   text-transform:uppercase;
 }
@@ -78,6 +80,21 @@
   top: -3.5rem;
   left: 75%;
   opacity: 0.8;
+}
+.check_label{
+  color: #E15554;
+  font-family: "PT Sans";
+  font-weight: bold;
+  width: 10%;
+  display: inline;
+}
+.check_boxes{
+  margin-left: 30%;
+  margin-right: 30%;
+  padding-left: 3vw;
+  opacity: 0.8;
+  background-color: white;
+  border-radius: 1vw;
 }
 
 /*===========Search(Result) Page=============*/
@@ -109,7 +126,5 @@
 }
 .label{
   position:relative;;
-  left: 30%;
-  margin-top: 5%;
-  margin-bottom: 5%;
+  left: 20%;
 }
